adde read me file